added google map api and loaded map to the homepage

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBDEQ6eSWQqdzRgqTsk7SKqEwQs2Y5gYg"></script>
     <title>vue-friends</title>
   </head>
   <body>
